Fix: flickering column width

--- a/htdocs/mygpiod.css
+++ b/htdocs/mygpiod.css
@@ -13,3 +13,7 @@ nav,
     background-color: var(--bs-gray-dark);
     border: 1px solid var(--bs-gray-900);
 }
+
+.gpio-state-th {
+    min-width: 10rem;
+}
